--- a/index.html
+++ b/index.html
@@ -227,9 +227,9 @@
                         <img src="imagem/logo.png" alt="">
                     </div>
                     <div class="btn-icon">
-                        <a href="#"><img src="icons/instagram.png" alt=""></a>
-                        <a href="#"><img src="icons/github 1.png" alt=""></a>
-                        <a href="#"><img src="icons/linkedin.png" alt=""></a>
+                        <a href="https://www.instagram.com/thewali_oli/"><img src="icons/instagram.png" alt=""></a>
+                        <a href="https://github.com/Devwalis"><img src="icons/github 1.png" alt=""></a>
+                        <a href="https://www.linkedin.com/feed/"><img src="icons/linkedin.png" alt=""></a>
                     </div><!--btn-icon-->
             </div><!--flex-->
             </div><!--line-footer-->
