Colocando curriculo para fazer download

--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
         </ul>
         </nav>
         <div class="btn-contato">
-            <button hrf="">Contato</button>
+            <button hrf="https://drive.google.com/uc?export=download&id=1HsiX7avAf1Z16WZotXAMtRtZhGvW6Plo
+">Contato</button>
         </div><!--btn-contato-->
 
         <div id="btn-menu" class="btn-abrir-menu">
@@ -34,7 +35,8 @@
         </div><!--btn-abrir-menu-->
         <div class="menu-mobile" id="menu-mobile">
             <div class="btn-fechar">
-                <a href=""> <img src="icons/botao-fechar.png" alt="" height="30px" width="30px"></a>
+                <a href="https://drive.google.com/uc?export=download&id=1HsiX7avAf1Z16WZotXAMtRtZhGvW6Plo
+"> <img src="icons/botao-fechar.png" alt="" height="30px" width="30px"></a>
             </div><!--btn-fechar-->
             <nav>
                 <ul>
@@ -142,8 +144,8 @@
                         Estou sempre buscando aprender e aprimorar minhas habilidades para criar soluções eficientes e inovadoras.</p>
                 </div><!--txt-sobre-->
                 <div class="btn-icon">
-                    <a href="https://www.instagram.com/dev_walii_oliveira/"><img src="icons/instagram.png" alt=""></a>
-                    <a href="https://github.com/Devwalis"><img src="icons/github 1.png" alt=""></a>
+                   <a href="https://drive.google.com/uc?export=download&id=1HsiX7avAf1Z16WZotXAMtRtZhGvW6Plo
+"> <img src="imagem/retomar.png" alt="Currículo"></a>
                     <a href="https://www.linkedin.com/in/walisson-oliveira-4a3234279/"><img src="icons/linkedin.png" alt=""></a>
                 </div><!--btn-icon-->
 
